# hockeygameclock

./: .gitignore  LICENSE  README.md  exec_tools.bat  gen_python_ui.bat  gen_qt_ui_python.bat  pyproject.toml  requirements.txt  setup_env.bat  tools.bat
.github/workflows/: analysis.yml  docs.yml  documentation.yml  format.yml  generation.yml  linting.yml  pylint.yml  test.yml  tests.yml
docs/: Makefile  conf.py  getting_started.rst  index.rst  make.bat
docs/_static/css/: custom.css
docs/developer/: design.rst  development.rst  getting_started.rst  index.rst  requirements.rst
docs/developer/design/: index.rst
docs/developer/diagrams/: overview.puml
docs/plantuml/: components.plantuml  overview.plantuml
docs/user/: index.rst
hockeyclock/: main.py
hockeyclock/backend/: fouls.py  goal.py  goal_manager.py  offense.py  penalties.json  penalty.py  penalty_manager.py  player.py  player_penalty.py  time_manager.py  timer.py
hockeyclock/ui/: mainwindow.ui
hockeygameclock/: __init__.py  __main__.py
hockeygameclock/backend/: __init__.py  goal.py  goal_manager.py  offense.py  penalty.py  penalty_manager.py  player.py  player_penalty.py  time_manager.py  types.py
hockeygameclock/frontend/: __init__.py  clock_page.py  main_window.py  music_page.py  resources.qrc  settings_page.py
hockeygameclock/frontend/ui/: __init__.py
hockeygameclock/frontend/widgets/: __init__.py
qt_ui/: main_window.ui  resources.qrc
scripts/: exec_tools.bat  gen_python_ui.bat  setup_env.bat
tests/backend/: goal_manager_test.py  goal_test.py  offense_test.py  penalty_test.py  player_penalty_test.py  player_test.py
ui/: clock_widget.ui  main_window.ui  resources.qrc
