[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name            = 'hockeygameclock'
version         = '1.0.0'
description     = 'Nice hockey game clock for timekeepers.'
authors         = [{name = 'Kilian Märkl'}]
maintainers     = [{name = 'Kilian Märkl'}, {name = 'Raphaela Märkl'}]
license         = {file = "LICENSE"}
readme          = "README.md"
requires-python = '>=3.10.5'
dependencies    = ['PySide6==6.3.1']

[project.urls]
repository = 'https://github.com/maerkl24/hockeygameclock'

[project.optional-dependencies]
dev = [
    'isort==5.10.1',
    'black==22.6.0',
    'pylint==2.15.0',
    'mypy==0.971',
]
test = [
    'pytest==7.1.2',
    'pytest-cov==3.0.0',
]
doc = [
    'Sphinx==5.1.1',
    'furo==2022.6.21',
]

[tool.setuptools]
packages = ['hockeygameclock']

[tool.black]
line-length = 120
#include = '(hockeygameclock|tests)\/.*(\.pyi?|\.ipynb)$'

[tool.pylint]
max-line-length = 120
disable = ['too-many-arguments', 'too-few-public-methods', 'too-many-instance-attributes', 'fixme']
load-plugins = ['pylint.extensions.docparams']
default-docstring-type = 'google'

[tool.mypy]
warn_return_any = true

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
addopts = "--cov=hockeygameclock"
testpaths = ['tests']
