# Build system
[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"


# Project
[project]
name            = "hockeygameclock"
dynamic         = ["version"]
description     = "Nice hockey game clock for timekeepers."
keywords        = ["Python", "Python3", "PySide6", "Qt", "GUI", "Desktop-Application"]
classifiers     = [
    "Environment :: X11 Applications :: Qt",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Desktop Environment",
    "Typing :: Typed",
]
authors         = [
    {name = "Kilian Märkl", email = "kilianmaerkl@web.de"},
]
readme          = "README.md"
license         = {file = "LICENSE"}
requires-python = ">=3.10.5,<3.11"
dependencies    = [
    "PySide6==6.4.2",
    "PySide6-DAW @ git+https://github.com/maerkl24/PySide6-DAW.git@v1.0.0",
]

[project.urls]
repository = "https://github.com/maerkl24/hockeygameclock"


# PDM
[tool.pdm.version]
source = "file"
path   = "hockeygameclock/__init__.py"

[tool.pdm.dev-dependencies]
format = [
    "isort>=5.12.0",
    "black>=23.1.0",
]
lint = [
    "pylint>=2.17.0",
    "mypy>=1.1.1",
]
test = [
    "pytest==7.2.2",
    "pytest-cov==4.0.0",
]
doc = [
    "Sphinx==6.1.3",
    "furo==2023.3.27",
    "sphinxcontrib-plantuml==0.25",
]


# Isort
[tool.isort]
profile = "black"
line_length = 120


# Black
[tool.black]
line-length = 120


# Pylint
[tool.pylint.main]
load-plugins = ["pylint.extensions.docparams"]
ignored-modules = [
    "PySide6",
]
extension-pkg-whitelist = ["PySide6"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = ["too-many-arguments", "too-few-public-methods", "too-many-instance-attributes", "fixme"]

[tool.pylint.parameter_documentation]
default-docstring-type = "google"


# Mypy
[tool.mypy]
warn_return_any = true

[[tool.mypy.overrides]]
module = "hockeygameclock.frontend.ui.*"
ignore_missing_imports = true


# PyTest
[tool.pytest.ini_options]
addopts = "--cov=hockeygameclock"
testpaths = ["tests"]
